--- a/tasks_day2/template/index.html
+++ b/tasks_day2/template/index.html
@@ -1,30 +1,152 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Academia - Free Bootstrap 5 Template by Colorlib</title>
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
-      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
-      crossorigin="anonymous"
-    />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css"
-      integrity="sha512-DxV+EoADOkOygM4IR9yXP8Sb2qwgidEmeqAEmDKIOfPRQZOWbXCzLC6vjbZyy0vPisbH2SyW27+ddLVCN+OMzQ=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    />
-    <script
-      defer
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
-      integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
-      crossorigin="anonymous"
-    ></script>
-    <link rel="stylesheet" href="./src/css/index.css" />
-    <script defer src="./src/js/index.js"></script>
-  </head>
-  <body></body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Academia - Free Bootstrap 5 Template by Colorlib</title>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css"
+    integrity="sha512-DxV+EoADOkOygM4IR9yXP8Sb2qwgidEmeqAEmDKIOfPRQZOWbXCzLC6vjbZyy0vPisbH2SyW27+ddLVCN+OMzQ=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
+    integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
+    crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="./src/css/index.css" />
+  <script defer src="./src/js/index.js"></script>
+</head>
+
+<body>
+  <footer class="footer mt-5">
+    <div class="container">
+      <div class="row mb-5">
+        <div class="col-md-6 col-lg">
+          <div class="footerLogo mb-4">
+            <h2 class="d-flex logo">
+              <a class="navbar-brand align-items-center" href="index.html">
+                <p style="margin: 0;">Academia</p>
+                <span>Online Education &amp; Learning</span>
+              </a>
+            </h2>
+            <p>
+              A small river named Duden flows by their place and supplies it with the necessary
+              regelialia.
+            </p>
+            <ul class="list-unstyled mt-2">
+              <li><a href="#"><i class="fab fa-twitter"></i></a></li>
+              <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
+              <li><a href="#"><i class="fab fa-instagram"></i></a></li>
+            </ul>
+          </div>
+        </div>
+        <div class="col-md-6 col-lg-2">
+          <div class="footerLinks mb-4">
+            <h2 class="heading">Explore</h2>
+            <ul class="list-unstyled">
+              <li><a href="#"><i class="fas fa-arrow-right me-2"></i>About Us</a></li>
+              <li><a href="#"><i class="fas fa-arrow-right me-2"></i>Services</a></li>
+              <li><a href="#"><i class="fas fa-arrow-right me-2"></i>Courses</a></li>
+              <li><a href="#"><i class="fas fa-arrow-right me-2"></i>Blog</a></li>
+              <li><a href="#"><i class="fas fa-arrow-right me-2"></i>Contact us</a></li>
+            </ul>
+          </div>
+        </div>
+        <div class="col-md-6 col-lg-2">
+          <div class="footerLinks mb-4">
+            <h2 class="heading">Quick Links</h2>
+            <ul class="list-unstyled">
+              <li><a href="#"><i class="fas fa-arrow-right me-2"></i>Contact Us</a></li>
+              <li><a href="#"><i class="fas fa-arrow-right me-2"></i>Pricing</a></li>
+              <li><a href="#"><i class="fas fa-arrow-right me-2"></i>Terms &amp; Conditions</a></li>
+              <li><a href="#"><i class="fas fa-arrow-right me-2"></i>Privacy</a></li>
+              <li><a href="#"><i class="fas fa-arrow-right me-2"></i>Feedbacks</a></li>
+            </ul>
+          </div>
+        </div>
+        <div class="col-md-6 col-lg">
+          <div class="footerPosts mb-4">
+            <h2 class="heading-2">Recent Posts</h2>
+            <div class="imageList mb-4 d-flex">
+              <a class="blog-img img rounded">
+                <img src="imgs/image_1.jpg" alt="Image_1">
+              </a>
+              <div class="text">
+                <div class="meta">
+                  <div><a href="#"><span class="fa fa-calendar"></span> Jan. 18, 2021</a></div>
+                  <div><a href="#"><span class="fa fa-user"></span> Admin</a></div>
+                </div>
+                <h3 class="heading"><a href="#">Creativity and Inspiration</a></h3>
+              </div>
+            </div>
+            <div class="imageList mb-4 d-flex">
+              <a class="blog-img img rounded">
+                <img src="imgs/image_2.jpg" alt="Image_2">
+              </a>
+              <div class="text">
+                <div class="meta">
+                  <div><a href="#"><span class="fa fa-calendar"></span> Jan. 18, 2021</a></div>
+                  <div><a href="#"><span class="fa fa-user"></span> Admin</a></div>
+                </div>
+                <h3 class="heading"><a href="#">Creativity and Inspiration</a></h3>
+              </div>
+            </div>
+            <div class="imageList mb-4 d-flex">
+              <a class="blog-img img rounded">
+                <img src="imgs/image_4.jpg" alt="Image_4">
+              </a>
+              <div class="text">
+                <div class="meta">
+                  <div><a href="#"><span class="fa fa-calendar"></span> Jan. 18, 2021</a></div>
+                  <div><a href="#"><span class="fa fa-user"></span> Admin</a></div>
+                </div>
+                <h3 class="heading"><a href="#">Creativity and Inspiration</a></h3>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-6 col-lg">
+          <div class="footerQue mb-4">
+            <h2 class="heading">Have a Questions?</h2>
+            <div class="footerQueContent mb-3">
+              <ul>
+                <li>
+                  <i class="icon fa fa-map marker"></i>
+                  <span class="text">203 Fake St. Mountain View, San Francisco, California, USA</span>
+                </li>
+                <li>
+                  <a href="#">
+                    <i class="icon fa fa-phone"></i>
+                    <span class="text">+2 392 3929 210</span>
+                  </a>
+                </li>
+                <li>
+                  <a href="#">
+                    <i class="icon fa fa-paper-plane"></i>
+                    <span class="text">info@yourdomain.com</span>
+                  </a>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="container-fluid px-0 py-5 copyRight">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-12 text-center">
+            <p class="mb-0" style="font-size: 14px;">
+              Copyright © 2025 All rights reserved | This template is made with
+              <i class="fa fa-heart"></i> by
+              <a href="https://colorlib.com" target="_blank">Colorlib</a>
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </footer>
+</body>
+
 </html>
