--- a/tasks_day2/template/index.html
+++ b/tasks_day2/template/index.html
@@ -518,7 +518,7 @@
             <h2 class="heading-2">Recent Posts</h2>
             <div class="imageList mb-4 d-flex">
               <a class="blog-img img rounded">
-                <img src="imgs/image_1.jpg" alt="Image_1">
+                <img src="src/imgs/image_1.jpg" alt="Image_1">
               </a>
               <div class="text">
                 <div class="meta">
@@ -530,7 +530,7 @@
             </div>
             <div class="imageList mb-4 d-flex">
               <a class="blog-img img rounded">
-                <img src="imgs/image_2.jpg" alt="Image_2">
+                <img src="src/imgs/image_2.jpg" alt="Image_2">
               </a>
               <div class="text">
                 <div class="meta">
@@ -542,7 +542,7 @@
             </div>
             <div class="imageList mb-4 d-flex">
               <a class="blog-img img rounded">
-                <img src="imgs/image_4.jpg" alt="Image_4">
+                <img src="src/imgs/image_4.jpg" alt="Image_4">
               </a>
               <div class="text">
                 <div class="meta">
