--- a/tasks_day2/template/index.html
+++ b/tasks_day2/template/index.html
@@ -222,6 +222,186 @@
     </div>
   </section>
 
+  <!-- Online Courses Cards Section -->
+   <section class="ftco-section">
+      <div class="container-xl">
+        <div class="row justify-content-center">
+          <div
+            class="col-md-8 heading-section text-center mb-5 aos-init aos-animate"
+            data-aos="fade-up"
+            data-aos-duration="1000">
+            <span class="subheading">Courses</span>
+            <h2 class="mb-4">Browse Our Online Courses</h2>
+          </div>
+        </div>
+        <div class="row g-lg-2 justify-content-center">
+          <div
+            class="col-md-3 col-xl-2 text-center d-flex align-items-stretch aos-init aos-animate"
+            data-aos="fade-up"
+            data-aos-delay="100"
+            data-aos-duration="1000">
+            <a href="#" class="services-2">
+              <div class="icon"><span class="flaticon-design"></span></div>
+              <div class="text">
+                <h2>UI/UX Design Courses</h2>
+                <span>25 Courses</span>
+              </div>
+            </a>
+          </div>
+          <div
+            class="col-md-3 col-xl-2 text-center d-flex align-items-stretch aos-init aos-animate"
+            data-aos="fade-up"
+            data-aos-delay="200"
+            data-aos-duration="1000">
+            <a href="#" class="services-2 active">
+              <div class="icon">
+                <span class="flaticon-paint-palette"></span>
+              </div>
+              <div class="text">
+                <h2>Art &amp; Design</h2>
+                <span>25 Courses</span>
+              </div>
+            </a>
+          </div>
+          <div
+            class="col-md-3 col-xl-2 text-center d-flex align-items-stretch aos-init aos-animate"
+            data-aos="fade-up"
+            data-aos-delay="300"
+            data-aos-duration="1000">
+            <a href="#" class="services-2">
+              <div class="icon">
+                <span class="flaticon-computer-science"></span>
+              </div>
+              <div class="text">
+                <h2>Computer Science</h2>
+                <span>10 Courses</span>
+              </div>
+            </a>
+          </div>
+          <div
+            class="col-md-3 col-xl-2 text-center d-flex align-items-stretch aos-init aos-animate"
+            data-aos="fade-up"
+            data-aos-delay="400"
+            data-aos-duration="1000">
+            <a href="#" class="services-2">
+              <div class="icon">
+                <span class="flaticon-magnifying-glass"></span>
+              </div>
+              <div class="text">
+                <h2>History &amp; Archeologic</h2>
+                <span>25 Courses</span>
+              </div>
+            </a>
+          </div>
+          <div
+            class="col-md-3 col-xl-2 text-center d-flex align-items-stretch aos-init aos-animate"
+            data-aos="fade-up"
+            data-aos-delay="400"
+            data-aos-duration="1000">
+            <a href="#" class="services-2">
+              <div class="icon"><span class="flaticon-engineer"></span></div>
+              <div class="text">
+                <h2>Software Engineering</h2>
+                <span>25 Courses</span>
+              </div>
+            </a>
+          </div>
+          <div
+            class="col-md-3 col-xl-2 text-center d-flex align-items-stretch aos-init aos-animate"
+            data-aos="fade-up"
+            data-aos-delay="400"
+            data-aos-duration="1000">
+            <a href="#" class="services-2">
+              <div class="icon"><span class="flaticon-algorithm"></span></div>
+              <div class="text">
+                <h2>Information Software</h2>
+                <span>25 Courses</span>
+              </div>
+            </a>
+          </div>
+          <div
+            class="col-md-3 col-xl-2 text-center d-flex align-items-stretch aos-init aos-animate"
+            data-aos="fade-up"
+            data-aos-delay="100"
+            data-aos-duration="1000">
+            <a href="#" class="services-2">
+              <div class="icon"><span class="flaticon-dumbbell"></span></div>
+              <div class="text">
+                <h2>Health &amp; Fitness</h2>
+                <span>25 Courses</span>
+              </div>
+            </a>
+          </div>
+          <div
+            class="col-md-3 col-xl-2 text-center d-flex align-items-stretch aos-init aos-animate"
+            data-aos="fade-up"
+            data-aos-delay="200"
+            data-aos-duration="1000">
+            <a href="#" class="services-2">
+              <div class="icon"><span class="flaticon-bullhorn"></span></div>
+              <div class="text">
+                <h2>Marketing</h2>
+                <span>15 Courses</span>
+              </div>
+            </a>
+          </div>
+          <div
+            class="col-md-3 col-xl-2 text-center d-flex align-items-stretch aos-init aos-animate"
+            data-aos="fade-up"
+            data-aos-delay="300"
+            data-aos-duration="1000">
+            <a href="#" class="services-2">
+              <div class="icon"><span class="flaticon-vector"></span></div>
+              <div class="text">
+                <h2>Graphic Design</h2>
+                <span>25 Courses</span>
+              </div>
+            </a>
+          </div>
+          <div
+            class="col-md-3 col-xl-2 text-center d-flex align-items-stretch aos-init aos-animate"
+            data-aos="fade-up"
+            data-aos-delay="400"
+            data-aos-duration="1000">
+            <a href="#" class="services-2">
+              <div class="icon">
+                <span class="flaticon-musical-notes"></span>
+              </div>
+              <div class="text">
+                <h2>Music</h2>
+                <span>25 Courses</span>
+              </div>
+            </a>
+          </div>
+          <div
+            class="col-md-3 col-xl-2 text-center d-flex align-items-stretch aos-init aos-animate"
+            data-aos="fade-up"
+            data-aos-delay="400"
+            data-aos-duration="1000">
+            <a href="#" class="services-2">
+              <div class="icon"><span class="flaticon-calendar-1"></span></div>
+              <div class="text">
+                <h2>Business Administration</h2>
+                <span>25 Courses</span>
+              </div>
+            </a>
+          </div>
+          <div
+            class="col-md-3 col-xl-2 text-center d-flex align-items-stretch aos-init aos-animate"
+            data-aos="fade-up"
+            data-aos-delay="400"
+            data-aos-duration="1000">
+            <a href="#" class="services-2">
+              <div class="icon"><span class="flaticon-coding"></span></div>
+              <div class="text">
+                <h2>Web Management</h2>
+                <span>25 Courses</span>
+              </div>
+            </a>
+          </div>
+        </div>
+      </div>
+    </section>
   <!--  feature/carousel section-->
   <section class="testimonial-section">
     <div class="section-heading">
