--- a/tasks_day2/template/src/css/index.css
+++ b/tasks_day2/template/src/css/index.css
@@ -635,6 +635,111 @@ body {
 
 /* Carousel section */
 
+/* Online Courses Cards Section */
+.ftco-section {
+  background-color: #f8f8f8;
+  color: #000000cc;
+  padding: 8em 0;
+  position: relative;
+  width: 100%;
+  overflow-x: hidden;
+  font-family: Roboto, Arial, sans-serif;
+  text-align: center;
+  a {
+    -webkit-transition: 0.3s all ease;
+    -o-transition: 0.3s all ease;
+    transition: 0.3s all ease;
+    text-decoration: none;
+    color: #000000cc;
+  }
+  .heading-section {
+    text-size-adjust: 100%;
+    .subheading {
+      font-size: 16px;
+      display: block;
+      margin-bottom: 5px;
+      color: #1eb2a6;
+      font-weight: 700;
+      line-height: 28.8px;
+
+      text-transform: uppercase;
+    }
+    h2 {
+      color: #000000cc;
+      line-height: 1.4;
+      font-size: 46px;
+      font-weight: 500;
+    }
+  }
+  .services-2 {
+    width: 100%;
+    background: #fff;
+    padding: 30px 20px;
+    margin-bottom: 0;
+    border-radius: 4px;
+    -moz-transition: all 0.3s ease;
+    -o-transition: all 0.3s ease;
+    -webkit-transition: all 0.3s ease;
+    -ms-transition: all 0.3s ease;
+    transition: all 0.3s ease;
+    -webkit-box-shadow: 0px 5px 25px -2px rgba(0, 0, 0, 0.06);
+    -moz-box-shadow: 0px 5px 25px -2px rgba(0, 0, 0, 0.06);
+    box-shadow: 0px 5px 25px -2px rgba(0, 0, 0, 0.06);
+    .icon {
+      margin-bottom: 8px;
+      span {
+        font-size: 70px;
+        line-height: 1.2;
+        color: #1eb2a6;
+      }
+    }
+    .text {
+      width: 100%;
+      h2 {
+        font-size: 20px;
+        font-weight: 600;
+        margin-bottom: 2px;
+      }
+      span {
+        font-size: 13px;
+        font-weight: 500;
+        background: #f8f8f8;
+        color: #1eb2a6;
+        padding: 5px;
+        border-radius: 4px;
+      }
+    }
+  }
+}
+
+.services-2:hover,
+.services-2.active {
+  background: rgb(30, 178, 166);
+  -webkit-box-shadow: 0px 5px 25px -2px rgba(0, 0, 0, 0.18);
+  -moz-box-shadow: 0px 5px 25px -2px rgba(0, 0, 0, 0.18);
+  box-shadow: rgba(0, 0, 0, 0.18) 0px 5px 25px -2px;
+}
+
+.services-2:hover,
+.services-2.active {
+  .icon span {
+    color: white;
+  }
+}
+
+.services-2:hover,
+.services-2.active {
+  .text h2 {
+    color: white;
+  }
+}
+
+@media (max-width: 575.98px) {
+  .ftco-section {
+    padding: 6em 0;
+  }
+}
+
 /* Main Section Container */
 .testimonial-section {
   width: 100%;
